--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,11 @@
 # System Files
 .DS_Store
+.Thumb.db
 
 # Secrets and Environment Variables
 .env
+.env.*
+!.env.example
 backend/.env
 frontend/.env
 **/*.env
@@ -17,8 +20,12 @@ backend/env/
 backend/dist/
 backend/build/
 *.egg-info/
+venv/
+.venv/
+env/
 
 # Node / Frontend
+node_modules/
 frontend/node_modules/
 frontend/dist/
 frontend/build/
@@ -26,11 +33,13 @@ frontend/.output/
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+pnpm-debug.log*
 
-# Database (if local)
+# Database
 *.sqlite
 *.sqlite3
 *.db
+backend/*.db
 
 # IDEs
 .idea/
